# nichan_text_generator

./: Cargo.toml  README.md
src/: error.rs  lib.rs
