[package]
name = "nichan_text_generator"
version = "0.1.0"
authors = ["madosuki <yurikasamaaikatsu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pwhash = "1"
regex = "1"
encoding = "0.2"
chrono = "0.4"
chrono-tz = "0.5"
base64 = "0.13"
rust-crypto = "0.2"
hex = "0.4"
