[package]
name = "nichan_text_generator"
version = "0.1.1"
authors = ["madosuki <yurikasamaaikatsu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pwhash = "1.0.0"
regex = "1.1.1"
encoding = "0.2.33"
chrono = "0.4.38"
chrono-tz = "0.10.0"
base64 = "0.22.1"
rust-crypto = "0.2.36"
hex = "0.4.3"
rand = "0.8.5"
thiserror = "2.0.0"
